finished rough about

--- a/about.html
+++ b/about.html
@@ -36,9 +36,9 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <main class="about">
-      <!-- <img src="img/wave.png" alt="Waving Astronaut" /> -->
+    <main class="about animate__animated animate__backInDown">
       <img src="img/wave.png" alt="Waving Astronaut" />
+      <h1>Nick Lukic</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit libero,
         repellendus consectetur voluptates eveniet quam pariatur illum veritatis
@@ -52,8 +52,24 @@
         ipsam?
       </p>
       <section class="links">
-        <div class="icon">GitHub - find good icons</div>
-        <div class="icon">LinkedIn - find good icons</div>
+        <div class="icon">
+          <a href="https://github.com/nfluk">
+            <img
+              src="img/github.png"
+              alt="GitHub logo blinking"
+              title="GitHub"
+            />
+          </a>
+        </div>
+        <div class="icon">
+          <a href="https://www.linkedin.com/in/nfluk/">
+            <img
+              src="img/linkedin.png"
+              alt="LinkedIn logo turning"
+              title="LinkedIn"
+            />
+          </a>
+        </div>
       </section>
     </main>
   </body>
