finished rough outline of index, about, skills

--- a/about.html
+++ b/about.html
@@ -29,11 +29,11 @@
         />
       </a>
       <ul class="main-nav animate__animated animate__lightSpeedInRight">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <main class="about animate__animated animate__backInDown">
@@ -52,7 +52,7 @@
         ipsam?
       </p>
       <section class="links">
-        <div class="icon">
+        <div class="social-icon">
           <a href="https://github.com/nfluk">
             <img
               src="img/github.png"
@@ -61,7 +61,7 @@
             />
           </a>
         </div>
-        <div class="icon">
+        <div class="social-icon">
           <a href="https://www.linkedin.com/in/nfluk/">
             <img
               src="img/linkedin.png"
