--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <nav class="container">
-      <a href="/index.html">
+      <a href="index.html">
         <img
           src="img/flying.png"
           alt="Logo"
@@ -38,16 +38,11 @@
       </ul>
     </nav>
     <main class="flex">
-      <img
-        class="main-img animate__animated animate__zoomInDown"
-        src="img/space.png"
-        alt="Astronaut hanging from a small half moon"
-      />
-      <!-- <img src="https://i.gifer.com/XlNx.gif" alt="Glimmering stars" /> -->
-      <!-- <img src="https://i.gifer.com/ZMQt.gif" alt="Goku going super saiyan" /> -->
-      <div class="main-text animate__animated animate__rotateIn">
-        <h1>Nick Lukic</h1>
-        <h2>Full-stack Developer</h2>
+      <div class="project-grid animate__animated animate__flash">
+        <img
+          src="img/underconstruction.png"
+          alt="Under construction silhouette "
+        />
       </div>
     </main>
   </body>
