--- a/skills.html
+++ b/skills.html
@@ -21,13 +21,12 @@
   </head>
   <body>
     <nav class="container">
-      <a href="/index.html">
+      <a href="index.html">
         <img
           src="img/flying.png"
           alt="Logo"
           class="logo animate__animated animate__lightSpeedInLeft"
         />
-        <!-- <img src="img/astro.png" alt="Logo" class="logo active" /> -->
       </a>
       <ul class="main-nav animate__animated animate__lightSpeedInRight">
         <li><a href="about.html">About</a></li>
@@ -37,17 +36,39 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main class="flex">
-      <img
-        class="main-img animate__animated animate__zoomInDown"
-        src="img/space.png"
-        alt="Astronaut hanging from a small half moon"
-      />
-      <!-- <img src="https://i.gifer.com/XlNx.gif" alt="Glimmering stars" /> -->
-      <!-- <img src="https://i.gifer.com/ZMQt.gif" alt="Goku going super saiyan" /> -->
-      <div class="main-text animate__animated animate__rotateIn">
-        <h1>Nick Lukic</h1>
-        <h2>Full-stack Developer</h2>
+    <main class="grid">
+      <div class="icon animate__animated animate__fadeInLeftBig">
+        <p class="black">JavaScript</p>
+        <img
+          src="img/skills/javascript.png"
+          alt="JavaScript logo"
+          class="skill-logo"
+        />
+      </div>
+
+      <div class="icon animate__animated animate__fadeInRightBig">
+        <p class="black">ReactJS</p>
+        <img src="img/skills/react.png" alt="ReactJS logo" class="skill-logo" />
+      </div>
+      <div class="icon animate__animated animate__fadeInLeftBig">
+        <p class="black">NodeJS</p>
+        <img src="img/skills/node.svg" alt="NodeJS logo" class="skill-logo" />
+      </div>
+      <div class="icon animate__animated animate__fadeInRightBig">
+        <p class="black">ExpressJS</p>
+        <img
+          src="img/skills/express.png"
+          alt="ExpressJS logo"
+          class="skill-logo"
+        />
+      </div>
+      <div class="icon animate__animated animate__fadeInLeftBig">
+        <p class="black">HTML</p>
+        <img src="img/skills/html.png" alt="HTML logo" class="skill-logo" />
+      </div>
+      <div class="icon animate__animated animate__fadeInRightBig">
+        <p class="black">CSS</p>
+        <img src="img/skills/css.png" alt="CSS logo" class="skill-logo" />
       </div>
     </main>
   </body>
