added contact form and CV link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <nav class="container">
-      <a href="/index.html">
+      <a href="index.html">
         <img
           src="img/flying.png"
           alt="Logo"
