--- a/skills.html
+++ b/skills.html
@@ -37,38 +37,53 @@
       </ul>
     </nav>
     <main class="grid">
-      <div class="icon animate__animated animate__fadeInLeftBig">
-        <p class="black">JavaScript</p>
-        <img
-          src="img/skills/javascript.png"
-          alt="JavaScript logo"
-          class="skill-logo"
-        />
+      <div class="scale">
+        <div class="icon animate__animated animate__fadeInLeftBig">
+          <p class="black">JavaScript</p>
+          <img
+            src="img/skills/javascript.png"
+            alt="JavaScript logo"
+            class="skill-logo"
+          />
+        </div>
       </div>
-
-      <div class="icon animate__animated animate__fadeInRightBig">
-        <p class="black">ReactJS</p>
-        <img src="img/skills/react.png" alt="ReactJS logo" class="skill-logo" />
+      <div class="scale">
+        <div class="icon animate__animated animate__fadeInRightBig">
+          <p class="black">ReactJS</p>
+          <img
+            src="img/skills/react.png"
+            alt="ReactJS logo"
+            class="skill-logo"
+          />
+        </div>
       </div>
-      <div class="icon animate__animated animate__fadeInLeftBig">
-        <p class="black">NodeJS</p>
-        <img src="img/skills/node.svg" alt="NodeJS logo" class="skill-logo" />
+      <div class="scale">
+        <div class="icon animate__animated animate__fadeInLeftBig">
+          <p class="black">NodeJS</p>
+          <img src="img/skills/node.svg" alt="NodeJS logo" class="skill-logo" />
+        </div>
       </div>
-      <div class="icon animate__animated animate__fadeInRightBig">
-        <p class="black">ExpressJS</p>
-        <img
-          src="img/skills/express.png"
-          alt="ExpressJS logo"
-          class="skill-logo"
-        />
+      <div class="scale">
+        <div class="icon animate__animated animate__fadeInRightBig">
+          <p class="black">ExpressJS</p>
+          <img
+            src="img/skills/express.png"
+            alt="ExpressJS logo"
+            class="skill-logo"
+          />
+        </div>
       </div>
-      <div class="icon animate__animated animate__fadeInLeftBig">
-        <p class="black">HTML</p>
-        <img src="img/skills/html.png" alt="HTML logo" class="skill-logo" />
+      <div class="scale">
+        <div class="icon animate__animated animate__fadeInLeftBig">
+          <p class="black">HTML</p>
+          <img src="img/skills/html.png" alt="HTML logo" class="skill-logo" />
+        </div>
       </div>
-      <div class="icon animate__animated animate__fadeInRightBig">
-        <p class="black">CSS</p>
-        <img src="img/skills/css.png" alt="CSS logo" class="skill-logo" />
+      <div class="scale">
+        <div class="icon animate__animated animate__fadeInRightBig">
+          <p class="black">CSS</p>
+          <img src="img/skills/css.png" alt="CSS logo" class="skill-logo" />
+        </div>
       </div>
     </main>
   </body>
