changed some animations

--- a/contact.html
+++ b/contact.html
@@ -37,15 +37,13 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main class="flex">
+    <main class="flex animate__animated animate__lightSpeedInLeft">
       <img
-        class="main-img animate__animated animate__zoomInDown"
+        class="main-img"
         src="img/resting.png"
         alt="Astronaut resting outside a small spaceship"
       />
-      <!-- <img src="https://i.gifer.com/XlNx.gif" alt="Glimmering stars" /> -->
-      <!-- <img src="https://i.gifer.com/ZMQt.gif" alt="Goku going super saiyan" /> -->
-      <div class="main-text contact animate__animated animate__rotateIn">
+      <div class="main-text contact">
         <h1>Contact</h1>
         <h2>
           <a
