fixed some margin and positioning issues

--- a/about.html
+++ b/about.html
@@ -40,16 +40,17 @@
       <img src="img/wave.png" alt="Waving Astronaut" />
       <h1>Nick Lukic</h1>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit libero,
-        repellendus consectetur voluptates eveniet quam pariatur illum veritatis
-        hic voluptate nesciunt laboriosam dolorem nemo fuga numquam quod fugiat
-        amet aut. Provident ut similique, iusto a autem cupiditate! Est corporis
-        nulla tempore consequatur nisi. Reprehenderit voluptatibus est quod
-        debitis velit at, error non, ut quasi facilis architecto, commodi earum
-        a iste! Facere recusandae repellat cumque facilis. Ea animi vel nam
-        illum quas, natus facilis quis. Porro dolore enim nostrum, harum dolor
-        nihil architecto velit inventore illum atque suscipit provident neque
-        ipsam?
+        I am a Full-Stack Developer based in Stockholm, Sweden.<br />
+        <br />
+        I am a positive person and a rational thinker. I believe that problems
+        can be solved if reason and competence are invested into solving them.
+        Solving problems, big and small, is what progress is all about.<br />
+        <br />
+        As a former professional sports analyst, gone sport tech entrepreneur,
+        gone developer, I have a lot of experience in solving all kinds of
+        different problems in various fields. I take all of this experience with
+        me into my developer approach and I constantly look to grow and evolve
+        both as a developer and as a person.
       </p>
       <section class="links">
         <div class="social-icon">
