fixed mobile view issues

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <main class="flex animate__animated animate__lightSpeedInLeft">
+    <main class="flex main-contact animate__animated animate__lightSpeedInLeft">
       <img
         class="main-img"
         src="img/resting.png"
