--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
     </nav>
     <main class="flex">
       <img
-        class="main-img animate__animated animate__zoomInDown"
+        class="main-img index-img animate__animated animate__zoomInDown"
         src="img/space.png"
         alt="Astronaut hanging from a small half moon"
       />
-      <!-- <img src="https://i.gifer.com/XlNx.gif" alt="Glimmering stars" /> -->
-      <!-- <img src="https://i.gifer.com/ZMQt.gif" alt="Goku going super saiyan" /> -->
       <div class="main-text animate__animated animate__rotateIn">
         <h1>Nick Lukic</h1>
         <h2>Full-stack Developer</h2>
