updated about section

--- a/about.html
+++ b/about.html
@@ -47,11 +47,10 @@
         can be solved if reason and competence are invested into solving them.
         Solving problems, big and small, is what progress is all about.<br />
         <br />
-        As a former professional sports analyst, gone sport tech entrepreneur,
-        gone developer, I have a lot of experience in solving all kinds of
-        different problems in various fields. I take all of this experience with
-        me into my developer approach and I constantly look to grow and evolve
-        both as a developer and as a person.
+        I have almost a decade of experience as an entrepreneur and my mission
+        is to help entrepreneurs grow their brands and revenue through their
+        online presence. If you are looking to take the next step in your
+        entrepreneurial journey, I'm here to help you succeed.
       </p>
       <section class="links">
         <div class="social-icon">
