--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="container">
       <a href="index.html">
         <img
-          src="img/flying.png"
+          src="img/logo.png"
           alt="Logo"
           class="logo animate__animated animate__lightSpeedInLeft"
         />
@@ -45,6 +45,7 @@
         alt="Astronaut hanging from a small half moon"
       />
       <div class="main-text animate__animated animate__rotateIn">
+        <!-- <img src="img/AD.png" alt="Logo" /> -->
         <h1>Nick Lukic</h1>
         <h2>Full-stack Developer</h2>
       </div>
