--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
     <nav class="container">
       <a href="index.html">
         <img
-          src="img/flying.png"
+          src="img/logo.png"
           alt="Logo"
           class="logo animate__animated animate__lightSpeedInLeft"
         />
