updated about section

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         can be solved if reason and competence are invested into solving them.
         Solving problems, big and small, is what progress is all about.<br />
         <br />
-        I have almost a decade of experience as an entrepreneur and my mission
+        I have roughly a decade of experience as an entrepreneur and my mission
         is to help entrepreneurs grow their brands and revenue through their
         online presence. If you are looking to take the next step in your
         entrepreneurial journey, I'm here to help you succeed.
