updated about section

--- a/about.html
+++ b/about.html
@@ -48,9 +48,14 @@
         Solving problems, big and small, is what progress is all about.<br />
         <br />
         I have roughly a decade of experience as an entrepreneur and my mission
-        is to help entrepreneurs grow their brands and revenue through their
-        online presence. If you are looking to take the next step in your
-        entrepreneurial journey, I'm here to help you succeed.
+        is to help businesses grow their brands and revenue through their online
+        presence. <br />
+        If you like minimalistic but impactful designs that look and feel
+        professional without unnecessary cluttering send me a message and let us
+        take it from there.<br />
+        <br />
+        If you are looking to take the next step in your entrepreneurial
+        journey, I'm here to help you succeed.
       </p>
       <section class="links">
         <div class="social-icon">
